--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,8 @@
   ],
   "require": {
     "silverstripe/framework": "^4",
+    "symbiote/silverstripe-queuedjobs": "^4 || ^5",
     "calcinai/xero-php": "^2.3"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^5.7",
-    "squizlabs/php_codesniffer": "^3"
-  },
-  "replace": {
-    "silverstripe/googlesitemaps": "*"
   },
   "extra": {
     "branch-alias": {
