--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,13 @@
     }
   ],
   "require": {
-    "silverstripe/framework": "^4",
+    "silverstripe/framework": "^5",
     "symbiote/silverstripe-queuedjobs": "^4 || ^5",
-    "calcinai/xero-php": "^2.3"
+    "calcinai/xero-php": "^2.5.5"
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "1.x-dev"
+      "dev-main": "2.x-dev"
     }
   },
   "autoload": {
